--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 *{
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Work Sans';
 }
 .btn-primary {
     font-weight: 600;
@@ -10,20 +10,52 @@
     border: none;
     border-radius: 5px;
     padding: 15px 25px;
+    cursor: pointer;
+}
+
+/* Nav CSS */
+.header-area{
+    background-image: url(../images/banner/banner3.png);
+}
+.menu-area {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px 10px;
+}
+.logo {
+    font-size: 30px;
+    color: #fff;
+}
+.logo span {
+    color: #16D887;
+}
+.menu-list {
+    display: flex;
+    align-items: center;
+    color: #fff;
+}
+.menu-list li{
+    list-style: none;
+    margin-right: 15px;
+    cursor: pointer;
+    font-size: 18px;
 }
 
 /* Banner Area CSS */
-.banner{
+.banner {
+    width: 100%;
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: right;
 }
 .banner-text {
     text-align: end;
     width: 490px;
-    float: right;
     margin-right: 150px;
-    margin-top: 240px;
 }
 .banner-title {
     font-weight: 700;
@@ -40,16 +72,17 @@
     margin-bottom: 25px;
 }
 
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 /* previous-year CSS */
 .previous-year{
     display: flex;
-    margin: 0 200px;
     align-items: center;
-    padding-top: 130px;
-    padding-bottom: 130px;
-}
-.prev-text {
-    padding: 0px 137px;
+    margin-top: 130px;
+    margin-bottom: 130px;
 }
 .prev-title{
     font-weight: 700;
@@ -84,7 +117,7 @@
 
 /* Plan Area CSS */
 .plan-area{
-    padding-bottom: 130px;
+    margin-bottom: 130px;
 }
 .section-title{
     text-align: center;
@@ -92,10 +125,11 @@
     font-size: 40px;
     line-height: 47px;
     color: #151414;
+    margin-bottom: 50px;
 }
-.plan-container{
+.plan-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     text-align: center;
     margin-top: 50px;
 }
@@ -112,4 +146,152 @@
     font-size: 25px;
     line-height: 29px;
     color: #737272;
+}
+
+/* Call Now CSS */
+.call-now{
+    background-image: url(../images/watch.png),
+    linear-gradient(90deg, rgba(1,100,200,0.8) 24%, rgba(233,238,242,0.2) 96%);
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 130px 130px;
+    margin-bottom: 130px;
+}
+.call-title{
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    color: #fff;
+    margin-bottom: 25px;
+}
+
+/* Get In Touch CSS */
+.get-in {
+    border-radius: 10px;
+    padding: 20px;
+    background: linear-gradient(to right, #ece9e6, #ffffff);
+    margin-bottom: 130px;
+}
+.get-container {
+    display: flex;
+    justify-content: space-around;
+}
+.get-description {
+    margin-bottom: 20px;
+    color: #FF651C;
+}
+.get-list{
+    padding-left: 0px;
+}
+.get-list li {
+    list-style: none;
+    margin-bottom: 33px;
+    font-size: 18px;
+}
+.get-list li i {
+    font-size: 25px;
+    padding: 16px;
+    color: #FF651C;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #FF651C;
+    border-radius: 50%;
+}
+input, textarea {
+    margin-bottom: 10px;
+    width: 100%;
+    padding: 14px;
+    border: 1px solid #005FAC;
+}
+.btn-msg{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    color: #fff;
+    background-color: #FF651C;
+    border: none;
+    border-radius: 5px;
+    padding: 15px 25px;
+    cursor: pointer;
+}
+
+/* Footer CSS */
+.footer-area {
+    display: flex;
+    justify-content: space-around;
+    background: #000;
+    padding: 100px;
+}
+.footer-left {
+    color: #fff;
+    width: 400px;
+}
+.footer-title{
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+    color: #F8F8F8;
+}
+.footer-description{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #fff;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.footer-list{
+    padding-left: 0px;
+}
+.footer-list li{
+    list-style: none;
+    margin-top: 10px;
+}
+.footer-social li {
+    list-style: none;
+    padding-right: 20px;
+    cursor: pointer;
+}
+.footer-social {
+    display: flex;
+    padding-left: 0px;
+    margin-top: 30px;
+}
+.footer-right {
+    color: #fff;
+}
+.footer-r-title{
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 29px;
+}
+.footer-email {
+    background: #000;
+    border: 1px solid #fff;
+    border-radius: 8px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 20px;
+}
+.footer-email::placeholder{
+    color: #fff;
+}
+.btn-footer{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    color: #fff;
+    background-color: #005FAC;
+    border: none;
+    border-radius: 5px;
+    padding: 15px 25px;
+    cursor: pointer;
+}
+.footer-copy {
+    background: #000;
+    color: #fff;
+    text-align: center;
+    border-top: 1px solid rgba(246, 243, 243, 0.5);
+    padding: 16px;
 }
