--- a/styles/style.css
+++ b/styles/style.css
@@ -14,8 +14,12 @@
 }
 
 /* Nav CSS */
-.header-area{
+.header-area {
     background-image: url(../images/banner/banner3.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
 }
 .menu-area {
     display: flex;
@@ -35,9 +39,9 @@
     align-items: center;
     color: #fff;
 }
-.menu-list li{
+.menu-list li {
     list-style: none;
-    margin-right: 15px;
+    margin-right: 40px;
     cursor: pointer;
     font-size: 18px;
 }
